Fix tripInfo visibility

--- a/style.css
+++ b/style.css
@@ -850,7 +850,7 @@ body {
     backdrop-filter: blur(40px);
         -webkit-backdrop-filter: blur(40px);
     
-    visibility: initial;
+    visibility: hidden;
 }
 
 .tripInformation #map {
